@@ -37,6 +37,7 @@ CHANGELOG
 * Always show path layer in detail pages (fixes #781)
 * Fix restore of topology on loop paths (fixes #760)
 * Fix topology construction when loop is formed by two convergent paths (fixes #768)
+* Add small tool page at ``/tools/extents/`` to visualize configured extents (ref #732)
 
 
 0.19.1 (2013-07-15)
